# crypto_prot

./: .gitignore  README.md  settings.gradle
KeysAndCerts/: genKeyAndCerts.sh  rootCertProps.txt
Server/src/main/java/net/its26/: Server.java
app/: build.gradle
app/src/main/java/net/its26/: App.java  Common.java  DSA.java  EC.java  Hash.java  RSA.java  SHA1.java
app/src/test/java/net/its26/: AppTest.java  CommonTest.java  DSATest.java  LicenseTest.java  RSATest.java  SHA1Test.java
basics/: settings.gradle
basics/KeysAndCerts/: clientCertProps.txt  genKeyAndCerts.sh  serverCertProps.txt
basics/client/: build.gradle
basics/client/src/main/java/net/its26/: Client.java
basics/cryptolib/src/main/java/net/its26/: AES.java  Common.java  DSA.java  HMAC.java  Pair.java
basics/cryptolib/src/test/java/net/its26/: ClientServerTest.java  CommonTest.java  RSATest.java
basics/doc/: ClientServer.odp
basics/server/src/main/java/net/its26/: Server.java
c_crypto_libs/: .gitignore  CMakeLists.txt  CryptoLibs.drawio  README.md
c_crypto_libs/src/: Common.h  CommonTypes.h  ConfigParser.cpp  ConfigParser.h  HydrogenWrapper.cpp  HydrogenWrapper.h  ICryptoWrapper.h  ISocket.h  LibTomWrapper.cpp  LibTomWrapper.h  SendReceive.cpp  SendReceive.h  UdpSocket.cpp  UdpSocket.h  main.cpp
c_crypto_libs/test/: c_crypto_prot_test.cpp
client/: build.gradle
client/src/main/java/net/its26/: Client.java
cryptolib/: build.gradle
cryptolib/src/main/java/net/its26/: AES.java  ClientServer.java  RSA.java
cryptolib/src/test/java/net/its26/: ClientServerTest.java  ECTest.java
merkle/: README.md  settings.gradle
merkle/merklelib/: build.gradle
merkle/merklelib/src/main/java/net/its26/: Common.java  KeyRecoveryAttack.java  LamportSignature.java  MerkleSignature.java
merkle/merklelib/src/test/java/net/its26/: HashTest.java  LamportSignatureTest.java  MerkleSignatureTest.java  OTSReuse.java
mqv/: README.md  settings.gradle
mqv/alice/src/main/java/net/its26/: Alice.java
mqv/bob/: build.gradle
mqv/bob/src/main/java/net/its26/: Bob.java
mqv/cryptolib/: build.gradle
mqv/cryptolib/src/main/java/net/its26/: Certificates.java  EC.java  MQV.java
mqv/cryptolib/src/test/java/net/its26/: AESTest.java  CertificatesTest.java  ECTest.java  HMACTest.java  HashTest.java  MITMTest.java  MQVTest.java
mqv/eve/: build.gradle
mqv/eve/src/main/java/net/its26/: Eve.java
needham_schroeder/: README.md  settings.gradle
needham_schroeder/alice/: build.gradle
needham_schroeder/alice/src/main/java/net/its26/: Alice.java
needham_schroeder/bob/src/main/java/net/its26/: Bob.java
needham_schroeder/cryptolib/src/main/java/net/its26/: Common.java  EC.java
needham_schroeder/cryptolib/src/test/java/net/its26/: CommonTest.java  MITMTest.java  MQVTest.java
needham_schroeder/mallory/: build.gradle
needham_schroeder/mallory/src/main/java/net/its26/: Mallory.java
needham_schroeder/server/: build.gradle
needham_schroeder/server/src/main/java/net/its26/: Server.java
server/: build.gradle
server/src/main/java/net/its26/: Server.java
